<resources>
    <string name="app_name">Workout Diary</string>

    <!-- Common using strings -->
    <string name="date_label">Date</string>
    <string name="name_label">Place for workout name</string>
    <string name="notes_label">Place for notes</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete">Delete</string>

    <!-- Strings for AddWorkoutActivity -->
    <string name="exercises_header">Exercises list</string>
    <string name="add_exercise_button">Add</string>
    <string name="add_workout_button">Add workout</string>
    <string name="expand_button">Expand</string>

    <!-- Strings for AddExerciseActivity -->
    <string name="exercise_name_hint">Exercise name</string>
    <string name="muscle_group_hint">Muscle group</string>
    <string name="set_header">Set</string>
    <string name="weight_header">Weight</string>
    <string name="reps_header">Reps</string>
    <string name="add_set">Add set</string>
    <string name="menu_options">Menu options</string>

    <string name="please_fill_exercise">Please fill exercise name</string>

    <string name="loading_error_message">Error due loading</string>
    <string name="unknown_error">Unknown Error</string>

    <!-- Concent description -->
    <string name="roll_out">Roll out</string>



</resources>